# self-sdk

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_V2.md  RELEASE.md  UPGRADE.md  configuring.md  contributing.md  qiproject.xml  running.md
examples/workshop_five/: CMakeLists.txt
examples/workshop_five/gestures/: MoveArmJoint.cpp
platform/: CMakeLists.txt
platform/abb/: ABBPlatform.cpp  ABBPlatform.h
platform/abb/gestures/: ABBMoveJointGesture.cpp  ABBMoveJointGesture.h
platform/linux/: CMakeLists.txt
platform/linux/sensors/: LinuxCamera.cpp  LinuxCamera.h  LinuxMicrophone.cpp  LinuxMicrophone.h
platform/mac/: CMakeLists.txt
platform/mac/gestures/: AQSpeechGesture.cpp  AQSpeechGesture.h
platform/mac/sensors/: AQMicrophone.cpp  AQMicrophone.h
platform/nao/: CMakeLists.txt  NaoPlatform.cpp  NaoPlatform.h
platform/nao/gestures/: NaoAnimateGesture.cpp  NaoAnimateGesture.h  NaoGraspGesture.cpp  NaoGraspGesture.h  NaoMoveGesture.cpp  NaoMoveGesture.h  NaoMoveJointGesture.cpp  NaoMoveJointGesture.h  NaoPostureGesture.cpp  NaoPostureGesture.h  NaoSoundGesture.cpp  NaoSoundGesture.h  NaoSpeechGesture.cpp  NaoSpeechGesture.h  NaoStatusGesture.cpp  NaoStatusGesture.h  NaoSystemGesture.cpp  NaoSystemGesture.h  NaoVolumeGesture.cpp  NaoVolumeGesture.h
platform/nao/sensors/: Nao3DCamera.cpp  Nao3DCamera.h  NaoCamera.cpp  NaoCamera.h  NaoGaze.cpp  NaoGaze.h  NaoGestureSensor.cpp  NaoGestureSensor.h  NaoHealthSensor.cpp  NaoHealthSensor.h  NaoLaser.cpp  NaoLaser.h  NaoMicrophone.cpp  NaoMicrophone.h  NaoMood.cpp  NaoMood.h  NaoSonar.cpp  NaoSonar.h  NaoSpeechToText.cpp  NaoSpeechToText.h  NaoTouch.cpp  NaoTouch.h
platform/nao/services/: NaoURLService.cpp  NaoURLService.h
platform/nao/tests/: TestLIBQI.cpp  TestNao3DCamera.cpp  TestNaoCamera.cpp  TestNaoGaze.cpp  TestNaoHealthSensor.cpp  TestNaoLaser.cpp  TestNaoMicrophone.cpp  TestNaoMood.cpp  TestNaoPlatform.cpp  (+4 more)
platform/ros/: CMakeLists.txt  RosPlatform.cpp  RosPlatform.h
platform/sota/: CMakeLists.txt
(+651 files in other folders)
